<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_library">Медиатека</string>
    <string name="btn_setting">Настройки</string>
    <string name="btn_playlist_add">Новый плейлист</string>
    <string name="btn_playlist_edit">Редактировать плейлист</string>
    <string name="setting_theme">Темная тема</string>
    <string name="setting_support">Написать в поддержку</string>
    <string name="setting_shared">Поделиться приложением</string>
    <string name="setting_agreement">Пользовательское соглашение</string>

    <string name="shared_text">https://practicum.yandex.ru/android-developer/</string>
    <string name="shared_title">Share APK</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email">alprem2016@yandex.ru</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_not_found">Ничего не нашлось</string>
    <string name="no_connect">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history_search">Очистить историю</string>
    <string name="title_history_search">Вы искали</string>
    <string name="content_description_audio_player">Обложка альбома</string>
    <string name="content_description_playlist">Обложка плейлиста</string>
    <string name="duration_audio_player">Длительность</string>
    <string name="album_audio_player">Альбом</string>
    <string name="year_audio_player">Год</string>
    <string name="genre_audio_player">Жанр</string>
    <string name="country_audio_player">Страна</string>
    <string name="null_timer">00:00</string>
    <string name="library_playlist">Плейлисты</string>
    <string name="library_favorites">Избранные треки</string>
    <string name="playlist_not_created">Вы не создали\nни одного плейлиста</string>
    <string name="playlist_not_found_track">В плейлесте нет треков</string>
    <string name="favorites_null">Ваша медиатека пуста</string>
    <string name="playlist_created">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_btn_add">Создать</string>
    <string name="playlist_btn_edit">Сохранить</string>
    <string name="title_add_to_playlist">Добавить в плейлист</string>
    <string name="track_added">Добавлено в плейлист</string>
    <string name="track_is_exists">Трек уже добавлен в плейлист</string>
    <string name="cansel">Отменить</string>
    <string name="ending">Завершить</string>
    <string name="end_add_playlist">Завершить создание плейлиста?</string>
    <string name="delete_track_dialog">Хотите удалить трек?</string>
    <string name="title_delete_playlist_dialog">Удалить плейлист</string>
    <string name="mes_playlist_dialog">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="cansel_playlist_dialog">Отмена</string>
    <string name="ok_playlist_dialog">Удалить</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="sharing">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="track_not_has_in_playlisr">В данном плейлисте нет списка треков, которым можно поделиться</string>


    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="time_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>