<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/mainActivity"
    tools:context=".search.ui.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/btn_search"
            style="@style/titleActivity"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_height"
        android:layout_marginVertical="@dimen/search_margin_vertical"
        android:background="@drawable/edittext_background"
        android:paddingHorizontal="@dimen/search_padding_vertical">
        <ImageView
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/search"
            style="@style/iconSearch"/>

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_height"
            android:hint="@string/btn_search"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true"
            style="@style/editTextSearch"/>

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/clear"
            android:visibility="gone"
            style="@style/iconSearch"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/errorLayout"
        style="@style/errorLayoutStyle">
        <ImageView
            android:id="@+id/errorImageView"
            android:src="@drawable/track_not_found"
            style="@style/errorTrack"/>
        <TextView
            android:id="@+id/errorTextView"
            android:text="@string/track_not_found"
            style="@style/titleErrorStyle"/>

        <Button
            android:id="@+id/refreshBtn"
            android:text="@string/refresh"
            style="@style/refreshBtn"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/main_padding_horizontal">

        <ProgressBar android:id="@+id/progressBar"
            android:layout_marginTop="@dimen/margin_top_progressBar"
            android:layout_width="@dimen/size_progressBar"
            android:layout_height="@dimen/size_progressBar"
            android:layout_gravity="center"
            android:indeterminateTint="@color/progress_bar"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/titleHistorySearch"
            android:text="@string/title_history_search"
            style="@style/titleHistorySearch"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <Button
            android:id="@+id/clearHistorySearchBtn"
            android:text="@string/clear_history_search"
            style="@style/cleanSearchHistoryBtn"
            />

    </LinearLayout>


</LinearLayout>