<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/main_padding_horizontal"
    android:paddingVertical="@dimen/main_padding_vertical"
    android:orientation="vertical">


<!--    <com.google.android.material.appbar.MaterialToolbar-->
<!--        app:contentInsetStart="0dp"-->
<!--        android:id="@+id/title"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:title="@string/btn_setting"-->
<!--        app:navigationIcon="@drawable/arrow_back"-->
<!--        app:contentInsetStartWithNavigation="@dimen/margin_icon_navigation"-->
<!--        app:titleTextColor="@color/text_color"-->
<!--        app:titleTextAppearance="@style/titleText"-->
<!--        />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/btn_setting"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_size"/>
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_marginTop="19dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/main_padding_horizontal"
        android:paddingVertical="@dimen/menu_padding_vertical"
        android:text="@string/setting_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/menu_font_size"
        app:thumbTint="#AEAFB4"
        style="@style/switchStyle"
        app:useMaterialThemeColors="false"

        />


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/shared"
        android:paddingHorizontal="@dimen/main_padding_horizontal"
        android:textColor="@color/black"
        android:paddingVertical="@dimen/menu_padding_vertical"
        android:text="@string/setting_shared"
        android:textSize="@dimen/menu_font_size" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:paddingHorizontal="@dimen/main_padding_horizontal"
        android:textColor="@color/black"
        android:paddingVertical="@dimen/menu_padding_vertical"
        android:text="@string/setting_support"
        android:textSize="@dimen/menu_font_size" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward"
        android:paddingHorizontal="@dimen/main_padding_horizontal"
        android:textColor="@color/black"
        android:paddingVertical="@dimen/menu_padding_vertical"
        android:text="@string/setting_agreement"
        android:textSize="@dimen/menu_font_size" />

</LinearLayout>