<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.AudioPlayerFragment">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".player.ui.AudioPlayerFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_audio_player"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".player.ui.AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_guide_begin_audio_player"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_guide_begin_audio_player"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide_content_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_guide_content_audio_player"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_content_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_guide_content_audio_player"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/margin_guide_top_audio_player"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/margin_guide_bottom_audio_player"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="track_time_title,
        collection_name_title,
        release_date_title,
        primary_genre_name_title,
        country_title" />

    <ImageView
        android:id="@+id/arrow_back"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guide"
        style="@style/imageInTitleActivity"
         />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="@dimen/size_null"
        android:layout_height="@dimen/size_null"
        android:layout_marginTop="@dimen/margin_top_cover"
        android:contentDescription="@string/content_description_audio_player"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
        app:layout_constraintTop_toTopOf="@+id/top_guide"
         />

    <TextView
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
        app:layout_constraintTop_toBottomOf="@id/cover"
        style="@style/apTitle"
         />

    <TextView
        android:id="@+id/trackAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        />

    <ImageView
        android:id="@+id/play"
        android:src="@drawable/play"
        app:layout_constraintEnd_toStartOf="@+id/right_content_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
        app:layout_constraintTop_toBottomOf="@+id/trackAuthor"
        style="@style/apControlPanelPlay"
        />

    <ImageView
        android:id="@+id/add_to_playlist"
        android:layout_width="@dimen/size_control_panel_btn"
        android:layout_height="@dimen/size_control_panel_btn"
        android:scaleType="fitStart"
        android:src="@drawable/add"
        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
        app:layout_constraintTop_toTopOf="@id/play"
        app:layout_constraintBottom_toBottomOf="@id/play"
        />

    <ImageView
        android:id="@+id/like"
        android:layout_width="@dimen/size_control_panel_btn"
        android:layout_height="@dimen/size_control_panel_btn"
        android:scaleType="fitEnd"
        android:src="@drawable/like"
        app:layout_constraintEnd_toEndOf="@+id/right_content_guideline"
        app:layout_constraintTop_toTopOf="@id/play"
        app:layout_constraintBottom_toBottomOf="@id/play"
        />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/play"
        style="@style/apTime"
        />

    <TextView
        android:id="@+id/track_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_audio_player"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/timer"
        style="@style/apInformationTitle"
        />

    <TextView
        android:id="@+id/track_time_value"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/track_time_title"
        app:layout_constraintBottom_toBottomOf="@id/track_time_title"
        style="@style/apInformationValue"
        />

    <TextView
        android:id="@+id/collection_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_audio_player"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_time_title"
        style="@style/apInformationTitle"
        />

    <TextView
        android:id="@+id/collection_name_value"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/collection_name_title"
        app:layout_constraintBottom_toBottomOf="@id/collection_name_title"
        style="@style/apInformationValue"
        />

    <TextView
        android:id="@+id/release_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_audio_player"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/collection_name_title"
        style="@style/apInformationTitle"
        />

    <TextView
        android:id="@+id/release_date_value"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/release_date_title"
        app:layout_constraintBottom_toBottomOf="@id/release_date_title"
        style="@style/apInformationValue"
        />

    <TextView
        android:id="@+id/primary_genre_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_audio_player"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/release_date_title"
        style="@style/apInformationTitle"
        />

    <TextView
        android:id="@+id/primary_genre_name_value"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/primary_genre_name_title"
        app:layout_constraintBottom_toBottomOf="@id/primary_genre_name_title"
        style="@style/apInformationValue"
        />

    <TextView
        android:id="@+id/country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_audio_player"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/primary_genre_name_title"
        style="@style/apInformationTitle"
        />

    <TextView
        android:id="@+id/country_value"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/country_title"
        app:layout_constraintBottom_toBottomOf="@id/country_title"
        style="@style/apInformationValue"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_vertical_bottom_sheet"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/height_bottom_sheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/bg_bottom_sheet">

        <View
            android:layout_width="@dimen/width_line_bottom_sheet"
            android:layout_height="@dimen/height_line_bottom_sheet"
            android:background="?attr/colorLineBottomSheet"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_line_bottom_sheet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/titleAddToPlaylist"
            android:text="@string/title_add_to_playlist" />

        <Button
            android:id="@+id/createPlaylistBtn"
            style="@style/addToPlaylistBtn"
            android:text="@string/playlist_created" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="@dimen/btn_padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>